# tauri-plugin-ankidroid

./: .gitignore  .npmrc  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  package.json  pnpm-lock.yaml  test-manual.cjs
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
PRPs/: JNI_fixes.md  README.md  android-emulator-vnc-setup.md  ankidroid-api-complete-implementation.md  ankidroid-api-rust-integration.md  ankidroid-api-rust.md  tauri-ankidroid-plugin.md  tauri-ankidroid-refactor.md
PRPs/ai_docs/: ankidroid-api-specification.md  ankidroid_api_reference.md  ankidroid_complete_api_reference.md  tauri_plugin_patterns.md
PRPs/ideas/: JNI_fixes.md  refactor.md  rpc-refactor.md
PRPs/planning/: API.md  ARCHITECTURE_PLAN.md  REFERENCE_IMPLEMENTATION.md
PRPs/templates/: prp_base.md
scripts/: comprehensive-test.sh  dev-android.sh  dev-hot-reload.sh  e2e-test-automated.sh  e2e-test.sh  emu-create-and-start.sh  emu-create-avd.sh  emu-install-ankidroid.sh  emu-start.sh  emulator-create-avd.sh  emulator-install-ankidroid.sh  emulator-start.sh  grant-ankidroid-permission.sh  robust-e2e-test.sh  run-tests.sh  vnc-start-services.sh  vnc-supervisor.conf
